Fix nav-bar spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ nav {
 
 .nav-links {
 	display: flex;
-	justify-content: space-around;
-	width: 30%;
+	justify-content: space-between;
+	width: 40%;
 }
 
 .nav-links li {
